<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.user_profile.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/customWhite"
        android:dividerPadding="3dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:weightSum="20">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">


            <ImageView
                android:id="@+id/user_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/empty_human" />


            <TextView
                android:id="@+id/user_surname"
                style="@style/Widget.ElDocuments.TextViewInitials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/surname"
                app:layout_constraintStart_toEndOf="@+id/user_image"
                app:layout_constraintTop_toTopOf="@+id/user_image" />

            <TextView
                android:id="@+id/user_name"
                style="@style/Widget.ElDocuments.TextViewInitials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/name"
                app:layout_constraintStart_toEndOf="@+id/user_image"
                app:layout_constraintBottom_toBottomOf="@+id/user_image"/>

            <TextView
                android:id="@+id/user_patronymic"
                style="@style/Widget.ElDocuments.TextViewInitials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/patronymic"
                app:layout_constraintStart_toEndOf="@+id/user_name"
                app:layout_constraintTop_toTopOf="@+id/user_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Контакты" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/telephone_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/telephone_icon" />

            <TextView
                android:id="@+id/telephone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:minWidth="50dp"
                android:text="Телефон"
                app:layout_constraintStart_toEndOf="@+id/telephone_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/telephone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:minWidth="50dp"
                android:text="+7 (999) 999 99 99"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/telephone_icon" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/email_icon" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:minWidth="50dp"
                android:text="Электронная почта"
                app:layout_constraintStart_toEndOf="@+id/email_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:minWidth="50dp"
                android:text="example@gmail.com"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_icon" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/notofication_icon" />

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:minWidth="50dp"
                android:text="Настройка уведомлений"
                app:layout_constraintBottom_toBottomOf="@+id/notification_icon"
                app:layout_constraintStart_toEndOf="@+id/notification_icon"
                app:layout_constraintTop_toTopOf="@+id/notification_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/permission_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/permission_icon" />

            <TextView
                android:id="@+id/permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:minWidth="50dp"
                android:text="Настройка разрешений"
                app:layout_constraintBottom_toBottomOf="@+id/permission_icon"
                app:layout_constraintStart_toEndOf="@+id/permission_icon"
                app:layout_constraintTop_toTopOf="@+id/permission_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>